fixed svg overlay overflow and position, shading of reading order digits

--- a/src/app/editor/sheet-overlay/sheet-overlay.component.css
+++ b/src/app/editor/sheet-overlay/sheet-overlay.component.css
@@ -1,4 +1,5 @@
 .editor-area {
+  position: relative;
   height: inherit;
   width: inherit;
   background-color: lightgray;
@@ -120,9 +121,13 @@ rect.lyrics-container {
 }
 
 .svg-overlay {
-  position: relative;
-  bottom: 0%;
-  top: -100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  pointer-events: none;
+  overflow: hidden;
 }
 
 .neume-syllable-connection {
